--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<ul>
 		<li><a href="timetable.html">Timetable</a></li>
 		<li><a href="email.html">Email</a></li>
-		<li><a href="print.html">CSS/Print</a></li>
+		<li><a href="CSS/print.html">Print</a></li>
 	</ul>
 </body>
 </html>
