--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li><a href="timetable.html">Timetable</a></li>
 		<li><a href="email.html">Email</a></li>
 		<li><a href="CSS/print.html">Print</a></li>
+		<li><a href="Script/plan.html">Rectangles</a></li>
 	</ul>
 </body>
 </html>
