--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<li><a href="email.html">Email</a></li>
 		<li><a href="CSS/print.html">Print</a></li>
 		<li><a href="Script/plan.html">Rectangles</a></li>
+		<li><a href="Script/plan.html">KeyWord</a></li>
 	</ul>
 </body>
 </html>
