--- a/FirstTask/galery.html
+++ b/FirstTask/galery.html
@@ -12,14 +12,14 @@
 <body>
     <div class="galery">
         <div class="big-photo">
-            <img src="Images/karacul.jpg">
+            <img src="Images/karacul.jpg" alt="Озеро каракуль">
         </div>
         <div class="mini-photo">
-            <img src="Images/ekb.jpg">
-            <img src="Images/bonfire.jpg">
-            <img src="Images/higtEkb.jpg">
-            <img src="Images/mat-mex.jpg">
-            <img src="Images/konfuzy.jpg">
+            <img src="Images/ekb.jpg" alt="Екатеринбург">
+            <img src="Images/bonfire.jpg" alt="Костёр">
+            <img src="Images/higtEkb.jpg" alt="Высокий Екатеринбург">
+            <img src="Images/mat-mex.jpg" alt="Мат-мех">
+            <img src="Images/konfuzy.jpg" alt="Конфуций">
         </div>
     </div>
     <div class="content">
