--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li><a href="CSS/print.html">Print</a></li>
 		<li><a href="Script/plan.html">Rectangles</a></li>
 		<li><a href="Events/dz.html">KeyWord</a></li>
-		<li><a href="First/index.html">Первая задача</a></li>
+		<li><a href="FirstTask/index.html">Первая задача</a></li>
 	</ul>
 </body>
 </html>
