--- a/FirstTask/info.html
+++ b/FirstTask/info.html
@@ -27,6 +27,8 @@
                 <p>
                     <strong>Образование:</strong>
                     Незаконченное высшее (Компьютерная безопасность - 3 курс)
+                    Учусь в <a href="http://urfu.ru">УрФУ</a> на
+                    <a href="https://vk.com/math_mech">мат-мехе</a>
                 </p>
                 <p>
                     <strong>Дополнительная информация:</strong>
